--- a/package.json
+++ b/package.json
@@ -1,17 +1,59 @@
 {
-  "name": "siteIdea",
-  "version": "1.0.0",
-  "main": "index.js",
-  "repository": "git@github.com:Hunterosmun/hunter-osmun.git",
-  "author": "Hunter Osmun <Hunter@Osmun.net>",
-  "license": "MIT",
+  "name": "here-we-go",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^13.5.0",
+    "apollo-server-core": "^3.6.3",
+    "apollo-server-express": "^3.6.3",
+    "axios": "^0.27.2",
+    "confetti-js": "^0.0.18",
+    "cors": "^2.8.5",
+    "dotenv": "^15.0.0",
+    "graphql": "^16.3.0",
+    "lodash": "^4.17.21",
+    "mongodb": "^4.3.1",
+    "nanoid": "^4.0.0",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "5.0.1",
+    "styled-components": "^5.3.5",
+    "web-vitals": "^2.1.4",
+    "yarn": "^1.22.19"
+  },
   "scripts": {
-    "dev": "js.new .",
-    "start": "serve .",
-    "build": "js.new build"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+
+    "gql": "node src/samples/to-do/graphql",
+    "test:lint": "eslint src server",
+    "start:todo-server": "node src/samples/to-do/server",
+    "start:client": "react-scripts start",
+    "start:server": "nodemon src/samples/to-do/server"
+  },
+  "eslintConfig": {
+    "extends": ["react-app", "react-app/jest"]
+  },
+  "proxy": "http://localhost:3001",
+  "browserslist": {
+    "production": [">0.2%", "not dead", "not op_mini all"],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "devDependencies": {
-    "js.new": "^0.0.20",
-    "serve": "^13.0.2"
+    "@graphql-eslint/eslint-plugin": "^3.8.0",
+    "nodemon": "^2.0.15",
+    "standard": "17.0.0-2"
+  },
+  "prettier": {
+    "alignTernaryLines": false
   }
 }
